[package]
name = "pong"
version = "1.0.0"
authors = ["Jonathan Nakandala"]
description = "Simple Game of Pong using Vulkano, Winit and Vulkano-text"
edition = "2018"
license = "MIT"
repository = "https://github.com/JonathanNakandala/pong"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = ["src/fonts/Roboto-Regular.ttf"]

[dependencies]
vulkano = "0.16"
vulkano-shaders = "0.16"
image = "0.21"
vulkano-win = "0.16.0"
winit = "0.19.5"
rand = "0.7.3"
rusttype = "0.8.2"
vulkano-text = {path = "../vulkano-text"}
