[package]
name = "vulkano-glyph"
description = "Text rendering with vulkano."
version = "0.4.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/vulkano-glyph"
documentation = "https://docs.rs/vulkano-glyph"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
vulkano = "0.16"
vulkano-shaders = "0.16"
log = "0.4.0"



[dependencies.rusttype]
version = "0.7.0"
features = ["gpu_cache"]
