[package]
name = "vulkano-text"
version = "0.11.1"
edition = "2018"
authors = ["Rukai <rubickent@gmail.com>"]
description = "Render text with the DejaVu font using the Vulkano library."
license = "MIT"
repository = "https://github.com/rukai/vulkano-text"
keywords = ["vulkano", "text", "font"]

[dependencies]
vulkano = "0.16"
vulkano-shaders = "0.16"
log = "0.4.0"

[dependencies.rusttype]
version = "0.7.0"
features = ["gpu_cache"]
